@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="ktorrent" version="16">
+<kpartgui name="ktorrent" version="17">
 <MenuBar>
   <Menu name="file"><text>&amp;File</text>
 	  <Action name="file_new"/>
@@ -12,6 +12,9 @@
 	  <Separator/>
 	  <Action name="ipfilter_action"/>
 	  <Merge/>
+  </Menu>
+  <Menu name="view"><text>&amp;View</text>
+	<Action name="show_group_view" />
   </Menu>
   <Menu name="Downloads"><text>Downloads</text>
 	<Action name="start" />
@@ -89,6 +92,7 @@
 	<Action name="file_new"/>
     <Action name="file_open"/>
 	<Action name="ipfilter_action"/>
+	<Action name="show_group_view" />
 	<Separator/>
 	<Action name="start"/>
 	<Action name="stop"/>
