@@ -7,6 +7,7 @@ Changes in 3.3:
 - Fix bug causing scheduler to not restart the schedule timer
 - Make sure running torrents at exit are restarted when KT starts up when the QM is disabled (204988)
 - Fix bug causing disabled trackers to be announced in a manual announce
+- Add action to menu and toolbar to show or hide the GroupView
 
 Changes in 3.3beta1:
 - Cleanup plugin list (180402)
